--- a/Hangman/Error!/task.html
+++ b/Hangman/Error!/task.html
@@ -9,7 +9,7 @@
 <ol>
 	<li>If the user enters the same letter twice then the program should output <code class="java">You already typed this letter</code> .</li>
 	<li>Also, you should check if the user prints an English lowercase letter or not. If not, the program should print <code class="java">It is not an ASCII lowercase letter</code> . </li>
-	<li>Also, you should check if the user printed exactly one letter. If not, the program should print <code class="java">You should print a single letter</code> . Remember that zero is also not one!</li>
+	<li>Also, you should check if the user printed exactly one letter. If not, the program should print <code class="java">You should input a single letter</code> . Remember that zero is also not one!</li>
 	<li>Note that all these three errors should not reduce attempts count!</li>
 </ol>
 
@@ -101,15 +101,15 @@ It is not an ASCII lowercase letter
 
 j---
 Input a letter: &gt; ii
-You should print a single letter
+You should input a single letter
 
 j---
 Input a letter: &gt; ++
-You should print a single letter
+You should input a single letter
 
 j---
 Input a letter: &gt;
-You should print a single letter
+You should input a single letter
 
 j---
 Input a letter: &gt; g
